tests/reject/variadic_empty_generic.ty
fn count(xs: ...$T) -> int:
    return len(xs)
fn main():
    print(str(count()))
